RESOLVED FIXED 236924
[GPU Process] Text filled with pattern sometimes draw with incorrect color
https://bugs.webkit.org/show_bug.cgi?id=236924
Summary [GPU Process] Text filled with pattern sometimes draw with incorrect color
Jon Lee
Reported 2022-02-19 22:00:55 PST
imported/mozilla/svg/linearGradient-basic-03.svg [ ImageOnlyFailure ] imported/mozilla/svg/pattern-transformed-01.svg [ ImageOnlyFailure ] svg/gradients/gradient-flipped-start-end-points.svg [ ImageOnlyFailure ] svg/gradients/spreadMethod.svg [ ImageOnlyFailure ] svg/gradients/spreadMethodAlpha.svg [ ImageOnlyFailure ] svg/gradients/spreadMethodDiagonal.svg [ ImageOnlyFailure ] svg/gradients/spreadMethodDiagonal2.svg [ ImageOnlyFailure ] svg/gradients/spreadMethodDiagonal3.svg [ ImageOnlyFailure ] svg/gradients/spreadMethodDiagonal4.svg [ ImageOnlyFailure ] svg/gradients/spreadMethodDuplicateStop.svg [ ImageOnlyFailure ] svg/gradients/spreadMethodReversed.svg [ ImageOnlyFailure ] svg/gradients/stopAlpha.svg [ ImageOnlyFailure ] svg/transforms/transformed-text-fill-gradient.html [ ImageOnlyFailure ] svg/transforms/transformed-text-fill-pattern.html [ ImageOnlyFailure ]
Attachments
Patch (6.05 KB, patch)
2022-03-29 14:56 PDT, Said Abou-Hallawa
no flags
Patch (6.79 KB, patch)
2022-04-04 11:40 PDT, Said Abou-Hallawa
mmaxfield: review+
Patch (6.87 KB, patch)
2022-04-06 01:08 PDT, Said Abou-Hallawa
no flags
Radar WebKit Bug Importer
Comment 1 2022-02-19 22:01:15 PST
Jon Lee
Comment 2 2022-03-14 23:33:48 PDT
The patch for bug 237728 resolves imported/mozilla/svg/linearGradient-basic-03.svg and svg/gradients/gradient-flipped-start-end-points.svg, and svg/transforms/transformed-text-fill-pattern.html turns into a crash.
Said Abou-Hallawa
Comment 3 2022-03-29 14:56:16 PDT
Said Abou-Hallawa
Comment 4 2022-04-04 11:40:32 PDT
Myles C. Maxfield
Comment 5 2022-04-05 13:18:22 PDT
Comment on attachment 456596 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=456596&action=review > Source/WebCore/platform/graphics/coretext/DrawGlyphsRecorderCoreText.cpp:152 > + return; Can we at least set it to a hardcoded color in this case? So it doesn't get filled with some random previously-used color? > Source/WebCore/platform/graphics/coretext/DrawGlyphsRecorderCoreText.cpp:164 > + return; Ditto.
Myles C. Maxfield
Comment 6 2022-04-05 13:20:44 PDT
Comment on attachment 456596 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=456596&action=review >> Source/WebCore/platform/graphics/coretext/DrawGlyphsRecorderCoreText.cpp:152 >> + return; > > Can we at least set it to a hardcoded color in this case? So it doesn't get filled with some random previously-used color? Actually, maybe it's better to ASSERT() the return of CGColorGetPattern() is equal to the pattern that was set on the context before recording any glyphs.
Said Abou-Hallawa
Comment 7 2022-04-06 01:08:01 PDT
EWS
Comment 8 2022-04-06 10:58:45 PDT
Committed r292478 (249329@main): <https://commits.webkit.org/249329@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 456788 [details].
Note You need to log in before you can comment on or make changes to this bug.