[GPU Process] Text filled with pattern sometimes draw with incorrect color https://bugs.webkit.org/show_bug.cgi?id=236924 rdar://89196811

Reviewed by Myles C. Maxfield.

Source/WebCore:

applyFillPattern() and applyStrokePattern() have to explicitly called
for the GraphicsContext or the DisplayList::Recorder before drawing
with the pattern. But this is not happening for the DrawGlyphsRecorder
internalContext. When CoreText calls DrawGlyphsRecorder::recordDrawGlyphs()
back, it applies the CGGState fill color to the DisplayList::Recorder so
it overrides what applyFillPattern() did before recording the glyphs.

* platform/graphics/DrawGlyphsRecorder.h:
* platform/graphics/coretext/DrawGlyphsRecorderCoreText.cpp:
(WebCore::DrawGlyphsRecorder::populateInternalContext):
(WebCore::DrawGlyphsRecorder::updateFillColor):
(WebCore::DrawGlyphsRecorder::updateStrokeColor):
(WebCore::DrawGlyphsRecorder::recordDrawGlyphs):

LayoutTests:

* platform/ios-wk2/TestExpectations:

Canonical link: https://commits.webkit.org/249329@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292478 268f45cc-cd09-0410-ab3c-d52691b4dbfc