Source/WebCore/platform/graphics/DrawGlyphsRecorder.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2020-2021 Apple Inc. All rights reserved.
+ * Copyright (C) 2020-2022 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -95,6 +95,8 @@ private:
     void updateShadow(const DropShadow&, ShadowsIgnoreTransforms);
 
 #if USE(CORE_TEXT) && !PLATFORM(WIN)
+    void updateFillColor(CGColorRef);
+    void updateStrokeColor(CGColorRef);
     void updateShadow(CGStyleRef);
 #endif
 
